# manims

./: .flake8  .gitignore  Makefile  pyproject.toml
data/: ames.npz
manims/: approx.py  gradient_descent.py
