[tool.poetry]
authors = ["m09 <142691+m09@users.noreply.github.com>"]
description = ""
name = "manims"
version = "0.1.0"

[tool.poetry.dependencies]
manim = "^0.11.0"
numpy = "^1.21.3"
python = ">= 3.8, < 3.11"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^4.0.1"
mypy = "^0.910"
pylint = "^2.11.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
