[tool.poetry]
authors = ["m09 <142691+m09@users.noreply.github.com>"]
description = ""
name = "manims"
packages = [{include = "manims"}]
version = "0.1.0"

[tool.poetry.dependencies]
manim = "^0.17.0"
numpy = "^1.23.5"
pandas = "^1.5.2"
plotly = "^5.11.0"
python = ">= 3.8.1, < 3.12"
scikit-learn = "^1.1.3"
setuptools = "^65.6.3"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^6.0.0"
flake8-bugbear = "^22.10.27"
isort = "^5.10.1"
mypy = "^0.991"
pylint = "^2.15.7"

[tool.isort]
profile = "black"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
