[tool.poetry]
authors = ["m09 <142691+m09@users.noreply.github.com>"]
description = ""
name = "manims"
packages = [{include = "manims"}]
version = "0.1.0"

[tool.poetry.dependencies]
manim = "^0.17"
numpy = "^1"
pandas = "^1"
plotly = "^5"
python = ">= 3.8.1, < 3.12"
scikit-learn = "^1"
setuptools = "^65"

[tool.poetry.group.dev.dependencies]
black = "^22"
flake8 = "^6"
flake8-bugbear = "^22"
isort = "^5"
mypy = "^0.991"
pylint = "^2"

[tool.isort]
profile = "black"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
